VKBootstrap/source/CVkBootstrap.h

enum class VkbInstanceError {
    NONE,
    VULKAN_UNAVAILABLE,
    VULKAN_VERSION_UNAVAILABLE,
    VULKAN_VERSION_1_1_UNAVAILABLE,
    VULKAN_VERSION_1_2_UNAVAILABLE,
    FAILED_CREATE_INSTANCE,
    FAILED_CREATE_DEBUG_MESSENGER,
    REQUESTED_LAYERS_NOT_PRESENT,
    REQUESTED_EXTENSIONS_NOT_PRESENT,
    WINDOWING_EXTENSIONS_NOT_PRESENT,
};
enum class VkbPhysicalDeviceError {
    NONE,
    NO_SURFACE_PROVIDED,
    FAILED_ENUMERATE_PHYSICAL_DEVICES,
    NO_PHYSICAL_DEVICES_FOUND,
    NO_SUITABLE_DEVICE,
};
enum class VkbQueueError {
    NONE,
    PRESENT_UNAVAILABLE,
    GRAPHICS_UNAVAILABLE,
    COMPUTE_UNAVAILABLE,
    TRANSFER_UNAVAILABLE,
    QUEUE_INDEX_OUT_OF_RANGE,
    INVALID_QUEUE_FAMILY_INDEX
};
enum class VkbDeviceError {
    NONE,
    FAILED_CREATE_DEVICE,
    VKPHYSICALDEVICEFEATURES2_IN_PNEXT_CHAIN_WHILE_USING_ADD_REQUIRED_EXTENSION_FEATURES,
};
enum class VkbSwapchainError {
    NONE,
    SURFACE_HANDLE_NOT_PROVIDED,
    FAILED_QUERY_SURFACE_SUPPORT_DETAILS,
    FAILED_CREATE_SWAPCHAIN,
    FAILED_GET_SWAPCHAIN_IMAGES,
    FAILED_CREATE_SWAPCHAIN_IMAGE_VIEWS,
    REQUIRED_MIN_IMAGE_COUNT_TOO_LOW,
    REQUIRED_USAGE_NOT_SUPPORTED
};
    EXPORT VkbInstanceError get_system_info(VkbSystemInfo* result);
    EXPORT VkbInstanceError get_system_info(PFN_vkGetInstanceProcAddr fp_vkGetInstanceProcAddr, VkbSystemInfo* result);
    
    EXPORT void delete_system_info(VkbSystemInfo* system_info);
    
    EXPORT bool is_layer_available(VkbSystemInfo system_info, const char* layer_name);
    EXPORT bool is_extension_available(VkbSystemInfo system_info, const char* extension_name);
    
    // This will return a slice or array view.
    EXPORT void get_available_layers(VkbSystemInfo system_info, VkLayerProperties** data, size_t* length);
    // This will return a slice or array view.
    EXPORT void get_available_extensions(VkbSystemInfo system_info, VkExtensionProperties** data, size_t* length);
    
    EXPORT bool is_validation_layers_available(VkbSystemInfo system_info);
    EXPORT bool is_debug_utils_available(VkbSystemInfo system_info);
    EXPORT VkInstance get_vk_instance(VkbInstance instance);
    EXPORT VkDebugUtilsMessengerEXT get_debug_messenger(VkbInstance instance);
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbInstance instance);
    
    EXPORT void destroy_instance(VkbInstance* instance);
    EXPORT VkbInstanceBuilder make_instance_builder();
    EXPORT VkbInstanceBuilder make_instance_builder(PFN_vkGetInstanceProcAddr fp_vkGetInstanceProcAddr);
    EXPORT void delete_instance_builder(VkbInstanceBuilder* builder);
    
    // Create a VkInstance. Return a VkbInstanceError if it failed.
    EXPORT VkbInstanceError build(VkbInstanceBuilder builder, VkbInstance* result);
    
    // Sets the name of the application. Defaults to "" if none is provided.
    EXPORT void set_app_name(VkbInstanceBuilder builder, const char* app_name);
    
    // Sets the name of the engine. Defaults to "" if none is provided.
    EXPORT void set_engine_name(VkbInstanceBuilder builder, const char* engine_name);
    // Sets the version of the application.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    EXPORT void set_app_version(VkbInstanceBuilder builder, uint32_t app_version);
    // Sets the (major, minor, patch) version of the application.
    EXPORT void set_app_version(VkbInstanceBuilder builder, uint32_t major, uint32_t minor, uint32_t patch = 0);
    // Sets the version of the engine.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    EXPORT void set_engine_version(VkbInstanceBuilder builder, uint32_t engine_version);
    // Sets the (major, minor, patch) version of the engine.
    EXPORT void set_engine_version(VkbInstanceBuilder builder, uint32_t major, uint32_t minor, uint32_t patch = 0);
    // Require a vulkan API version. Will fail to create if this version isn't available.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    EXPORT void require_api_version(VkbInstanceBuilder builder, uint32_t required_api_version);
    // Require a vulkan API version. Will fail to create if this version isn't available.
    EXPORT void require_api_version(VkbInstanceBuilder builder, uint32_t major, uint32_t minor, uint32_t patch = 0);
    // Overrides required API version for instance creation. Will fail to create if this version isn't available.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    EXPORT void set_minimum_instance_version(VkbInstanceBuilder builder, uint32_t minimum_instance_version);
    // Overrides required API version for instance creation. Will fail to create if this version isn't available.
    EXPORT void set_minimum_instance_version(VkbInstanceBuilder builder, uint32_t major, uint32_t minor, uint32_t patch = 0);
    // Adds a layer to be enabled. Will fail to create an instance if the layer isn't available.
    EXPORT void enable_layer(VkbInstanceBuilder builder, const char* layer_name);
    // Adds an extension to be enabled. Will fail to create an instance if the extension isn't available.
    EXPORT void enable_extension(VkbInstanceBuilder builder, const char* extension_name);
	
	EXPORT void enable_extensions(VkbInstanceBuilder builder, const char** extensions_data, size_t array_length);
    EXPORT void enable_extensions(VkbInstanceBuilder builder, size_t count, const char** extensions);
    // Headless Mode does not load the required extensions for presentation. Defaults to true.
    EXPORT void set_headless(VkbInstanceBuilder builder, bool headless = true);
    // Enables the validation layers. Will fail to create an instance if the validation layers aren't available.
    EXPORT void enable_validation_layers(VkbInstanceBuilder builder, bool require_validation = true);
    // Checks if the validation layers are available and loads them if they are.
    EXPORT void request_validation_layers(VkbInstanceBuilder builder, bool enable_validation = true);
    // Use a default debug callback that prints to standard out.
    EXPORT void use_default_debug_messenger(VkbInstanceBuilder builder);
    // Provide a user defined debug callback.
    EXPORT void set_debug_callback(VkbInstanceBuilder builder, PFN_vkDebugUtilsMessengerCallbackEXT callback);
    // Query the list of extensions which the physical device supports
    // Note: string_lengths and array_data allocates with malloc(), this leaves the caller 
    // responsible to free the memory.
    EXPORT void get_available_extensions(VkbPhysicalDevice pdevice, const char*** array_data, size_t* array_length, size_t** string_lengths);
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbDevice device);
    
    EXPORT VkbDeviceError build(VkbDeviceBuilder builder, VkbDevice* result);
    EXPORT VkAllocationCallbacks* get_allocation_callbacks(VkbSwapchain swapchain);
    
    EXPORT VkbSwapchainError build(VkbSwapchainBuilder builder, VkbSwapchain* result);