VKBootstrap/modified_generated_windows.jai

//
// This file was auto-generated using the following command:
//
// jai generate_bindings.jai
//


InstanceError :: enum s32 {
    NONE                             :: 0;
    VULKAN_UNAVAILABLE               :: 1;
    VULKAN_VERSION_UNAVAILABLE       :: 2;
    VULKAN_VERSION_1_1_UNAVAILABLE   :: 3;
    VULKAN_VERSION_1_2_UNAVAILABLE   :: 4;
    FAILED_CREATE_INSTANCE           :: 5;
    FAILED_CREATE_DEBUG_MESSENGER    :: 6;
    REQUESTED_LAYERS_NOT_PRESENT     :: 7;
    REQUESTED_EXTENSIONS_NOT_PRESENT :: 8;
    WINDOWING_EXTENSIONS_NOT_PRESENT :: 9;
}

PhysicalDeviceError :: enum s32 {
    NONE                              :: 0;
    NO_SURFACE_PROVIDED               :: 1;
    FAILED_ENUMERATE_PHYSICAL_DEVICES :: 2;
    NO_PHYSICAL_DEVICES_FOUND         :: 3;
    NO_SUITABLE_DEVICE                :: 4;
}

QueueError :: enum s32 {
    NONE                       :: 0;
    PRESENT_UNAVAILABLE        :: 1;
    GRAPHICS_UNAVAILABLE       :: 2;
    COMPUTE_UNAVAILABLE        :: 3;
    TRANSFER_UNAVAILABLE       :: 4;
    QUEUE_INDEX_OUT_OF_RANGE   :: 5;
    INVALID_QUEUE_FAMILY_INDEX :: 6;
}

DeviceError :: enum s32 {
    NONE                                                                                 :: 0;
    FAILED_CREATE_DEVICE                                                                 :: 1;
    VKPHYSICALDEVICEFEATURES2_IN_PNEXT_CHAIN_WHILE_USING_ADD_REQUIRED_EXTENSION_FEATURES :: 2;
}

SwapchainError :: enum s32 {
    NONE                                 :: 0;
    SURFACE_HANDLE_NOT_PROVIDED          :: 1;
    FAILED_QUERY_SURFACE_SUPPORT_DETAILS :: 2;
    FAILED_CREATE_SWAPCHAIN              :: 3;
    FAILED_GET_SWAPCHAIN_IMAGES          :: 4;
    FAILED_CREATE_SWAPCHAIN_IMAGE_VIEWS  :: 5;
    REQUIRED_MIN_IMAGE_COUNT_TOO_LOW     :: 6;
    REQUIRED_USAGE_NOT_SUPPORTED         :: 7;
}

SystemInfo_T :: struct {}
SystemInfo :: *SystemInfo_T;

// SystemInfoFunctions
    get_system_info :: (result: *SystemInfo) -> InstanceError #foreign libvkbootstrap "?get_system_info@VkbSystemInfoFunctions@@YA?AW4VkbInstanceError@@PEAPEAUVkbSystemInfo_T@@@Z";
    get_system_info :: (fp_vkGetInstanceProcAddr: PFN_vkGetInstanceProcAddr, result: *SystemInfo) -> InstanceError #foreign libvkbootstrap "?get_system_info@VkbSystemInfoFunctions@@YA?AW4VkbInstanceError@@P6AP6AXXZPEAUVkInstance_T@@PEBD@ZPEAPEAUVkbSystemInfo_T@@@Z";

    delete_system_info :: (system_info: *SystemInfo) -> void #foreign libvkbootstrap "?delete_system_info@VkbSystemInfoFunctions@@YAXPEAPEAUVkbSystemInfo_T@@@Z";

    is_layer_available :: (system_info: SystemInfo, layer_name: *u8) -> bool #foreign libvkbootstrap "?is_layer_available@VkbSystemInfoFunctions@@YA_NPEAUVkbSystemInfo_T@@PEBD@Z";
    is_extension_available :: (system_info: SystemInfo, extension_name: *u8) -> bool #foreign libvkbootstrap "?is_extension_available@VkbSystemInfoFunctions@@YA_NPEAUVkbSystemInfo_T@@PEBD@Z";

    // This will return a slice or array view.
    get_available_layers :: (system_info: SystemInfo, data: **VkLayerProperties, length: *u64) -> void #foreign libvkbootstrap "?get_available_layers@VkbSystemInfoFunctions@@YAXPEAUVkbSystemInfo_T@@PEAPEAUVkLayerProperties@@PEA_K@Z";
    get_available_layers :: inline (system_info: SystemInfo) -> []VkLayerProperties #no_context {
        result: []VkLayerProperties = ---;
        length: u64 = ---;
        get_available_layers(system_info, *result.data, *length);
        result.count = xx length;
        return result;
    }

    // This will return a slice or array view.
    get_available_extensions :: (system_info: SystemInfo, data: **VkExtensionProperties, length: *u64) -> void #foreign libvkbootstrap "?get_available_extensions@VkbSystemInfoFunctions@@YAXPEAUVkbSystemInfo_T@@PEAPEAUVkExtensionProperties@@PEA_K@Z";
    get_available_extensions :: inline (system_info: SystemInfo) -> []VkExtensionProperties #no_context {
        result: []VkExtensionProperties = ---;
        length: u64 = ---;
        get_available_extensions(system_info, *result.data, *length);
        result.count = xx length;
        return result; 
    }

    is_validation_layers_available :: (system_info: SystemInfo) -> bool #foreign libvkbootstrap "?is_validation_layers_available@VkbSystemInfoFunctions@@YA_NPEAUVkbSystemInfo_T@@@Z";
    is_debug_utils_available :: (system_info: SystemInfo) -> bool #foreign libvkbootstrap "?is_debug_utils_available@VkbSystemInfoFunctions@@YA_NPEAUVkbSystemInfo_T@@@Z";

Instance_T :: struct {}
Instance :: *Instance_T;

// InstanceFunctions
    get_vk_instance :: (instance: Instance) -> VkInstance #foreign libvkbootstrap "?get_vk_instance@VkbInstanceFunctions@@YAPEAUVkInstance_T@@PEAUVkbInstance_T@@@Z";
    get_debug_messenger :: (instance: Instance) -> VkDebugUtilsMessengerEXT #foreign libvkbootstrap "?get_debug_messenger@VkbInstanceFunctions@@YAPEAUVkDebugUtilsMessengerEXT_T@@PEAUVkbInstance_T@@@Z";
    get_allocation_callbacks :: (instance: Instance) -> *VkAllocationCallbacks #foreign libvkbootstrap "?get_allocation_callbacks@VkbInstanceFunctions@@YAPEAUVkAllocationCallbacks@@PEAUVkbInstance_T@@@Z";

    destroy_instance :: (instance: *Instance) -> void #foreign libvkbootstrap "?destroy_instance@VkbInstanceFunctions@@YAXPEAPEAUVkbInstance_T@@@Z";

InstanceBuilder_T :: struct {}
InstanceBuilder :: *InstanceBuilder_T;

// InstanceBuilderFunctions
    make_instance_builder :: () -> InstanceBuilder #foreign libvkbootstrap "?make_instance_builder@VkbInstanceBuilderFunctions@@YAPEAUVkbInstanceBuilder_T@@XZ";
    make_instance_builder :: (fp_vkGetInstanceProcAddr: PFN_vkGetInstanceProcAddr) -> InstanceBuilder #foreign libvkbootstrap "?make_instance_builder@VkbInstanceBuilderFunctions@@YAPEAUVkbInstanceBuilder_T@@P6AP6AXXZPEAUVkInstance_T@@PEBD@Z@Z";
    delete_instance_builder :: (builder: *InstanceBuilder) -> void #foreign libvkbootstrap "?delete_instance_builder@VkbInstanceBuilderFunctions@@YAXPEAPEAUVkbInstanceBuilder_T@@@Z";

    // Create a VkInstance. Return a VkbInstanceError if it failed.
    build :: (builder: InstanceBuilder, result: *Instance) -> InstanceError #foreign libvkbootstrap "?build@VkbInstanceBuilderFunctions@@YA?AW4VkbInstanceError@@PEAUVkbInstanceBuilder_T@@PEAPEAUVkbInstance_T@@@Z";
    build :: inline (builder: InstanceBuilder) -> Instance, InstanceError #no_context {
        result: Instance = ---;
        error := build(builder, *result);
        return result, error;
    }

    // Sets the name of the application. Defaults to "" if none is provided.
    set_app_name :: (builder: InstanceBuilder, app_name: *u8) -> void #foreign libvkbootstrap "?set_app_name@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEBD@Z";

    // Sets the name of the engine. Defaults to "" if none is provided.
    set_engine_name :: (builder: InstanceBuilder, engine_name: *u8) -> void #foreign libvkbootstrap "?set_engine_name@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEBD@Z";

    // Sets the version of the application.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    set_app_version :: (builder: InstanceBuilder, app_version: u32) -> void #foreign libvkbootstrap "?set_app_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Sets the (major, minor, patch) version of the application.
    set_app_version :: (builder: InstanceBuilder, major: u32, minor: u32, patch: u32 = 0) -> void #foreign libvkbootstrap "?set_app_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@III@Z";

    // Sets the version of the engine.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    set_engine_version :: (builder: InstanceBuilder, engine_version: u32) -> void #foreign libvkbootstrap "?set_engine_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Sets the (major, minor, patch) version of the engine.
    set_engine_version :: (builder: InstanceBuilder, major: u32, minor: u32, patch: u32 = 0) -> void #foreign libvkbootstrap "?set_engine_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@III@Z";

    // Require a vulkan API version. Will fail to create if this version isn't available.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    require_api_version :: (builder: InstanceBuilder, required_api_version: u32) -> void #foreign libvkbootstrap "?require_api_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Require a vulkan API version. Will fail to create if this version isn't available.
    require_api_version :: (builder: InstanceBuilder, major: u32, minor: u32, patch: u32 = 0) -> void #foreign libvkbootstrap "?require_api_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@III@Z";

    // Overrides required API version for instance creation. Will fail to create if this version isn't available.
    // Should be constructed with VK_MAKE_VERSION or VK_MAKE_API_VERSION.
    set_minimum_instance_version :: (builder: InstanceBuilder, minimum_instance_version: u32) -> void #foreign libvkbootstrap "?set_minimum_instance_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@I@Z";

    // Overrides required API version for instance creation. Will fail to create if this version isn't available.
    set_minimum_instance_version :: (builder: InstanceBuilder, major: u32, minor: u32, patch: u32 = 0) -> void #foreign libvkbootstrap "?set_minimum_instance_version@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@III@Z";

    // Adds a layer to be enabled. Will fail to create an instance if the layer isn't available.
    enable_layer :: (builder: InstanceBuilder, layer_name: *u8) -> void #foreign libvkbootstrap "?enable_layer@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEBD@Z";

    // Adds an extension to be enabled. Will fail to create an instance if the extension isn't available.
    enable_extension :: (builder: InstanceBuilder, extension_name: *u8) -> void #foreign libvkbootstrap "?enable_extension@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEBD@Z";

    enable_extensions :: (builder: InstanceBuilder, extensions_data: **u8, array_length: u64) -> void #foreign libvkbootstrap "?enable_extensions@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@PEAPEBD_K@Z";
    enable_extensions :: (builder: InstanceBuilder, count: u64, extensions: **u8) -> void #foreign libvkbootstrap "?enable_extensions@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@_KPEAPEBD@Z";

    // Headless Mode does not load the required extensions for presentation. Defaults to true.
    set_headless :: (builder: InstanceBuilder, headless := true) -> void #foreign libvkbootstrap "?set_headless@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@_N@Z";

    // Enables the validation layers. Will fail to create an instance if the validation layers aren't available.
    enable_validation_layers :: (builder: InstanceBuilder, require_validation := true) -> void #foreign libvkbootstrap "?enable_validation_layers@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@_N@Z";

    // Checks if the validation layers are available and loads them if they are.
    request_validation_layers :: (builder: InstanceBuilder, enable_validation := true) -> void #foreign libvkbootstrap "?request_validation_layers@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@_N@Z";

    // Use a default debug callback that prints to standard out.
    use_default_debug_messenger :: (builder: InstanceBuilder) -> void #foreign libvkbootstrap "?use_default_debug_messenger@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@@Z";

    // Provide a user defined debug callback.
    set_debug_callback :: (builder: InstanceBuilder, callback: PFN_vkDebugUtilsMessengerCallbackEXT) -> void #foreign libvkbootstrap "?set_debug_callback@VkbInstanceBuilderFunctions@@YAXPEAUVkbInstanceBuilder_T@@P6AIW4VkDebugUtilsMessageSeverityFlagBitsEXT@@IPEBUVkDebugUtilsMessengerCallbackDataEXT@@PEAX@Z@Z";
